# Multi-Agent-Text2SQL-System

./: .gitignore  README.md  agents.py  configuration.py  example.env  example_schema.json  graph.py  main.py  playground.ipynb  pyproject.toml  requirements.txt  sqlvalidator.py  states.py
agents/: agents.py  graph.py  prompts.py  schemas.py  states.py
